Chart and Packages fixes
Chart text overlap mobile fix
Packages buttons padding fix

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -198,6 +198,13 @@ table{
     margin-bottom: 5px;
 
 }
+
+@media (max-width: 576px) {
+    #chart2 {
+        margin-top: 120px;
+    }
+}
+
 .info{
     padding: 0;
     /*width: 147px;*/
@@ -211,9 +218,12 @@ table{
     margin-bottom: 5px;
 }
 
+.invest-packages .btn{
+    padding-left: 10px !important;
+    padding-right: 10px !important;
+}
+
 .btn-invest-start{
-    padding-left: 25px;
-    padding-right: 25px;
     margin-top: 5px;
     margin-bottom: 5px;
     border-color: #31c37d !important;
@@ -221,9 +231,6 @@ table{
 }
 
 .btn-invest-pro{
-
-    padding-left: 25px;
-    padding-right: 25px;
     border: none!important;
     margin-top: 5px;
     margin-bottom: 5px;
